--- a/arch/arm/configs/JZ_f460_defconfig
+++ b/arch/arm/configs/JZ_f460_defconfig
@@ -453,7 +453,7 @@ CONFIG_MSM_BOOT_STATS=y
 # CONFIG_MSM_CPR_REGULATOR is not set
 CONFIG_KRAIT_REGULATOR=y
 CONFIG_HAS_MACH_MEMUTILS=y
-CONFIG_INTELLI_HOTPLUG=y
+# CONFIG_INTELLI_HOTPLUG is not set
 # CONFIG_PLAT_SPEAR is not set
 
 #
@@ -687,18 +687,15 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
-# CONFIG_PM_ADVANCED_DEBUG is not set
-# CONFIG_PM_TEST_SUSPEND is not set
-CONFIG_PM_SLEEP_DEBUG=y
+# CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
-CONFIG_SUSPEND_TIME=y
+# CONFIG_SUSPEND_TIME is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
-CONFIG_QUICK_WAKEUP=y
+# CONFIG_QUICK_WAKEUP is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
@@ -732,7 +729,7 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_IP_PNP_RARP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE_DEMUX is not set
-CONFIG_NET_IP_TUNNEL=y
+# CONFIG_NET_IP_TUNNEL is not set
 # CONFIG_IP_MROUTE is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
@@ -770,31 +767,7 @@ CONFIG_DEFAULT_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_LGP_DATA_TCPIP_TCP_SYN_RETRY_CONFIG_UPLUS is not set
-CONFIG_IPV6=y
-CONFIG_IPV6_PRIVACY=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
-CONFIG_INET6_AH=y
-CONFIG_INET6_ESP=y
-CONFIG_INET6_IPCOMP=y
-CONFIG_IPV6_MIP6=y
-CONFIG_INET6_XFRM_TUNNEL=y
-CONFIG_INET6_TUNNEL=y
-CONFIG_INET6_XFRM_MODE_TRANSPORT=y
-CONFIG_INET6_XFRM_MODE_TUNNEL=y
-CONFIG_INET6_XFRM_MODE_BEET=y
-# CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION is not set
-CONFIG_IPV6_SIT=y
-# CONFIG_IPV6_SIT_6RD is not set
-CONFIG_IPV6_NDISC_NODETYPE=y
-# CONFIG_IPV6_TUNNEL is not set
-# CONFIG_IPV6_GRE is not set
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_SUBTREES=y
-# CONFIG_IPV6_MROUTE is not set
-# CONFIG_LGP_DATA_TCPIP_SLAAC_IPV6_ALLOCATION_BOOSTER is not set
-# CONFIG_LGP_DATA_BUGFIX_IPV6_ADDRCONF_KERNEL_CRASH is not set
+# CONFIG_IPV6 is not set
 # CONFIG_NETLABEL is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
@@ -968,30 +941,6 @@ CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
-
-#
-# IPv6: Netfilter Configuration
-#
-CONFIG_NF_DEFRAG_IPV6=y
-CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_IP6_NF_IPTABLES=y
-# CONFIG_IP6_NF_MATCH_AH is not set
-# CONFIG_IP6_NF_MATCH_EUI64 is not set
-# CONFIG_IP6_NF_MATCH_FRAG is not set
-# CONFIG_IP6_NF_MATCH_OPTS is not set
-# CONFIG_IP6_NF_MATCH_HL is not set
-# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
-# CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_RPFILTER is not set
-# CONFIG_IP6_NF_MATCH_RT is not set
-# CONFIG_IP6_NF_TARGET_HL is not set
-CONFIG_IP6_NF_FILTER=y
-CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
-CONFIG_IP6_NF_MANGLE=y
-CONFIG_IP6_NF_RAW=y
-# CONFIG_IP6_NF_SECURITY is not set
-# CONFIG_NF_NAT_IPV6 is not set
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_BRIDGE_EBT_T_FILTER is not set
@@ -1000,7 +949,6 @@ CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_BRIDGE_EBT_AMONG is not set
 # CONFIG_BRIDGE_EBT_ARP is not set
 # CONFIG_BRIDGE_EBT_IP is not set
-# CONFIG_BRIDGE_EBT_IP6 is not set
 # CONFIG_BRIDGE_EBT_LIMIT is not set
 # CONFIG_BRIDGE_EBT_MARK is not set
 # CONFIG_BRIDGE_EBT_PKTTYPE is not set
@@ -1847,20 +1795,7 @@ CONFIG_CLD_LL_CORE=y
 # CONFIG_LIBERTAS is not set
 # CONFIG_WL_TI is not set
 # CONFIG_MWIFIEX is not set
-CONFIG_BCMDHD=y
-CONFIG_BCMDHD_PCIE=y
-# CONFIG_BCM4343 is not set
-# CONFIG_BCM4354 is not set
-CONFIG_BCM4356=y
-# CONFIG_BCMDHD_COB is not set
-CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
-CONFIG_LGE_BCM433X_PATCH=y
-CONFIG_BCMDHD_CONFIG_PATH="/data/misc/wifi/config"
-CONFIG_BCMDHD_GPIO_WL_RESET=82
-# CONFIG_BRCM_CCX is not set
-CONFIG_BCMDHD_USE_SCHED_SCAN=y
-CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
+# CONFIG_BCMDHD is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -2737,9 +2672,7 @@ CONFIG_USB_GSPCA=m
 #
 # CONFIG_VIDEO_EM28XX is not set
 # CONFIG_MEDIA_PCI_SUPPORT is not set
-CONFIG_V4L_PLATFORM_DRIVERS=y
-# CONFIG_VIDEO_CAFE_CCIC is not set
-# CONFIG_SOC_CAMERA is not set
+# CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
 
@@ -2747,41 +2680,7 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 # Qualcomm MSM Camera And Video
 #
 # CONFIG_MSM_CAMERA is not set
-CONFIG_MSMB_CAMERA=y
-# CONFIG_MSMB_CAMERA_DEBUG is not set
-CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_LG_OIS=y
-CONFIG_LG_PROXY=y
-CONFIG_MSM_CPP=y
-CONFIG_MSM_CCI=y
-# CONFIG_MSM_CSI20_HEADER is not set
-# CONFIG_MSM_CSI22_HEADER is not set
-# CONFIG_MSM_CSI30_HEADER is not set
-CONFIG_MSM_CSI31_HEADER=y
-CONFIG_MSM_CSIPHY=y
-CONFIG_MSM_CSID=y
-CONFIG_MSM_EEPROM=y
-CONFIG_MSM_ISPIF=y
-# CONFIG_MSM_ISPIF_V1 is not set
-# CONFIG_S5K3L1YX is not set
-CONFIG_IMX135=y
-# CONFIG_IMX134 is not set
-# CONFIG_IMX132 is not set
-CONFIG_IMX208=y
-# CONFIG_OV2720 is not set
-# CONFIG_OV9724 is not set
-# CONFIG_HI256 is not set
-# CONFIG_OV5648 is not set
-# CONFIG_MT9M114 is not set
-# CONFIG_SP1628 is not set
-# CONFIG_GC0339 is not set
-# CONFIG_OV8825 is not set
-# CONFIG_OV8865 is not set
-# CONFIG_s5k4e1 is not set
-# CONFIG_OV12830 is not set
-# CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
-CONFIG_MSMB_JPEG=y
-# CONFIG_LGE_DUAL_LED is not set
+# CONFIG_MSMB_CAMERA is not set
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_WFD=y
 # CONFIG_MSM_WFD_DEBUG is not set
@@ -4000,8 +3899,7 @@ CONFIG_MSM_XPU_ERR_FATAL=y
 #
 # LGE Broadcast Device Support
 #
-CONFIG_LGE_BROADCAST_TDMB=y
-CONFIG_LGE_BROADCAST_TDMB_FC8080=y
+# CONFIG_LGE_BROADCAST_TDMB is not set
 
 #
 # File systems
@@ -4183,8 +4081,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
 # CONFIG_DETECT_HUNG_TASK is not set
-CONFIG_SCHED_DEBUG=y
-# CONFIG_SYSRQ_SCHED_DEBUG is not set
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
