--- a/arch/arm/configs/JZ_f460_defconfig
+++ b/arch/arm/configs/JZ_f460_defconfig
@@ -695,6 +695,8 @@ CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
+# CONFIG_DEDUCE_WAKEUP_REASONS is not set
+# CONFIG_PARTIALRESUME is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 # CONFIG_QUICK_WAKEUP is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
