--- a/arch/arm/configs/JZ_f460_defconfig
+++ b/arch/arm/configs/JZ_f460_defconfig
@@ -632,7 +632,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
+# CONFIG_CPU_FREQ_GOV_DARKNESS is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_BOOST=y
 
@@ -1281,6 +1281,7 @@ CONFIG_APQ8084_DOCKING_STATION=y
 CONFIG_LGE_IRRC=y
 CONFIG_BU52031NVX=y
 CONFIG_TSPDRV=y
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -3922,6 +3923,13 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_CHECK_FS=y
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
@@ -3992,12 +4000,6 @@ CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
-CONFIG_F2FS_CHECK_FS=y
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
